--- a/ProyectoFinal/Release/makefile
+++ b/ProyectoFinal/Release/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := SolucionTarea6
+BUILD_ARTIFACT_NAME := ProyectoFinal
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-SolucionTarea6.elf \
+ProyectoFinal.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-SolucionTarea6.list \
+ProyectoFinal.list \
 
 OBJCOPY_BIN += \
-SolucionTarea6.bin \
+ProyectoFinal.bin \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: SolucionTarea6.elf secondary-outputs
+main-build: ProyectoFinal.elf secondary-outputs
 
 # Tool invocations
-SolucionTarea6.elf: $(OBJS) $(USER_OBJS) C:\Taller5\repositorio1\Actividades_Taller_5\SolucionTarea6\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "SolucionTarea6.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Taller5\repositorio1\Actividades_Taller_5\SolucionTarea6\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="SolucionTarea6.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+ProyectoFinal.elf: $(OBJS) $(USER_OBJS) C:\Taller5\repositorio1\Actividades_Taller_5\ProyectoFinal\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "ProyectoFinal.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Taller5\repositorio1\Actividades_Taller_5\ProyectoFinal\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ProyectoFinal.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,19 +70,19 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-SolucionTarea6.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "SolucionTarea6.list"
+ProyectoFinal.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "ProyectoFinal.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-SolucionTarea6.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "SolucionTarea6.bin"
+ProyectoFinal.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "ProyectoFinal.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) SolucionTarea6.elf
+	-$(RM) $(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) ProyectoFinal.elf
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
